--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "migrate": "npx knex migrate:latest --knexfile bd/knexfile.ts",
+    "migrate:down": "npx knex migrate:down --knexfile src/db/knexfile.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
